--- a/index.html
+++ b/index.html
@@ -537,14 +537,14 @@
     }
   },
   {
-  "title": "I Am Security",
-  "category": "Simulation / Casual",
-  "rating": 4.8,
-  "downloads": "50K+",
-  "description": "Step into the shoes of a club security guard in 'I Am Security,' where your job is to keep the club safe and ensure only the right guests get inside. As a security guard, you’ll face a variety of challenges that will test your observation and decision-making skills. Use tools like metal detectors and scanners to inspect guests, remove tattoos, splash water, and even give haircuts. Upgrade your equipment through the in-game shop to handle increasingly complex scenarios.",
-  "badge": "FREE",
-  "image": "https://play-lh.googleusercontent.com/4mqQs6DG9oa1yImua9GN9H1V--EfNj1LhR0AtdrbPKYE0J9oOPMbYTJCXWw1WxHXgw",
-  downloadLink: {
+    "title": "I Am Security", 
+    "category": "Puzzle / Casual",
+    "rating": 4.5,
+    "downloads": "100M+",
+    "description": "Never Fishdomed before? Take a deep breath and dive into an underwater world of match-3 fun! Decorate aquariums, feed fish, and watch them interact with each other—all in a relaxing, colorful aquatic environment. Swap and match pieces, design tanks, and unlock new fish with quirky personalities.",
+    "badge": "FREE",
+    "image": "https://play-lh.googleusercontent.com/4mqQs6DG9oa1yImua9GN9H1V--EfNj1LhR0AtdrbPKYE0J9oOPMbYTJCXWw1WxHXgw",
+    downloadLink: {
       android: "https://installchecker.com/cl/i/x6w1ll",
       apple: "https://installchecker.com/cl/i/x6w1ll",
     }
